{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "ef5c4404-6b5a-470c-a7e7-97fc384338fe",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "b7142e95-cae1-4e60-9461-a077a4d31ba6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "a93ac0b5-5265-44c9-b653-db040190a7fd",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "be304a0d-3bce-4353-a0fa-f11d70a1564c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Swap",
                    "type": "Button",
                    "id": "87b67b47-267f-4188-9cf2-59d15ad038d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "caac3742-c0c3-4855-913a-2bd221b7db9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FinishTest",
                    "type": "Button",
                    "id": "d81464f6-83f5-4d05-8cac-30df89e9c488",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Calculate",
                    "type": "Button",
                    "id": "5ad5a47b-b860-4ecd-b3d2-ee710c98742a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "6ce5b946-f01c-446c-bf97-e99ba53ef55e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "3f6639ba-712b-4cfb-90eb-4d17cbc96bd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Prev",
                    "type": "Button",
                    "id": "353357ac-b426-48ed-a4f4-469329ccd1ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FinishScene",
                    "type": "Button",
                    "id": "b6dd77df-14d7-409b-9bf4-db28f8784558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResumeScene",
                    "type": "Button",
                    "id": "24dc2808-fcd3-43a1-9a3b-49b5ad31299a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "fecbcc81-a4d2-44dc-869a-5cbd517ce51e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7f5c635c-bd4f-40a3-89a0-945b399a501d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d3e8e15-ace5-4a0d-b21e-2319923eb8a9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "410a2af8-a20a-434e-86f5-3c9f8b6a1a71",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c03b5e0e-7117-4593-89f0-72fc3b0a52be",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad89adb3-21f2-4c2d-9e20-32f186487f59",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8114dfe3-ad83-4101-bb90-5f03ec35a447",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FinishTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c915048-55ed-4db0-b3c9-56f72a27fae8",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Calculate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bca5843-8d77-46b4-8e50-a585bbab0088",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cef3c67-b9a5-43bd-92e5-87c9786e8997",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "116165c8-b9cc-4348-a1c2-aa7d2a826a52",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Prev",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3337f98-a74c-4200-ab6e-d33a69f86a51",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FinishScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62e0f92-4f1e-45f2-bf71-b7b9989536c2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ResumeScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3b256b-9a87-4c99-ab53-95d68de16a1b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Hold(duration=0.7)",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": []
        }
    ]
}